# actix-web-mysql

./: .env_example  Cargo.toml  readme.md
src/: main.rs
